WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
97439
[REGRESSION] Layout Test webaudio/biquad-getFrequencyResponse.html is failing
https://bugs.webkit.org/show_bug.cgi?id=97439
Summary
[REGRESSION] Layout Test webaudio/biquad-getFrequencyResponse.html is failing
Yury Semikhatsky
Reported
2012-09-24 02:03:49 PDT
webaudio/biquad-getFrequencyResponse.html layout test is crashing in debug mode Chromium and sometimes has text mismatch in release mode after
http://trac.webkit.org/changeset/129277
Link to the flakiness dashboard:
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=webaudio%2Fbiquad-getFrequencyResponse.html
Mac Dbg result:
http://build.chromium.org/p/chromium.webkit/builders/Webkit%20Mac10.7%20(dbg)/builds/502/steps/webkit_tests/logs/stdio
Stack trace: crash log for DumpRenderTree (pid 31650): STDOUT: <empty> STDERR: ASSERTION FAILED: isGood STDERR: third_party/WebKit/Source/WebCore/Modules/webaudio/AudioParam.cpp(117) : void WebCore::AudioParam::calculateFinalValues(float*, unsigned int, bool) STDERR: 1 0x7f918ccb040c STDERR: 2 0x7f918ccb029e STDERR: 3 0x7f918ccb6504 STDERR: 4 0x7f918ccb697e STDERR: 5 0x7f918ccb7a1e STDERR: 6 0x7f918ccb6dec STDERR: 7 0x7f918c1ee59d STDERR: 8 0x7f9189ce6f26 STDERR: 9 0x7f9189ce1b85 STDERR: 10 0x7f9189ce1b56 STDERR: 11 0x190f9f40618e STDERR: [31650:31650:15937858315177:ERROR:process_util_posix.cc(143)] Received signal 11 STDERR: base::debug::StackTrace::StackTrace() [0x7f91898676a2] STDERR: base::(anonymous namespace)::StackDumpSignalHandler() [0x7f91898cfe2d] STDERR: 0x7f9182b52af0 STDERR: WebCore::AudioParam::calculateFinalValues() [0x7f918ccb0416] STDERR: WebCore::AudioParam::finalValue() [0x7f918ccb029e] STDERR: WebCore::BiquadDSPKernel::updateCoefficientsIfNecessary() [0x7f918ccb6504] STDERR: WebCore::BiquadDSPKernel::getFrequencyResponse() [0x7f918ccb697e] STDERR: WebCore::BiquadProcessor::getFrequencyResponse() [0x7f918ccb7a1e] STDERR: WebCore::BiquadFilterNode::getFrequencyResponse() [0x7f918ccb6de
Attachments
Patch
(1.47 KB, patch)
2012-09-24 14:19 PDT
,
Chris Rogers
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Rogers
Comment 1
2012-09-24 14:19:42 PDT
Created
attachment 165447
[details]
Patch
Kenneth Russell
Comment 2
2012-09-24 14:25:56 PDT
Comment on
attachment 165447
[details]
Patch Ack. r=me
WebKit Review Bot
Comment 3
2012-09-24 14:55:23 PDT
Comment on
attachment 165447
[details]
Patch Clearing flags on attachment: 165447 Committed
r129418
: <
http://trac.webkit.org/changeset/129418
>
WebKit Review Bot
Comment 4
2012-09-24 14:55:26 PDT
All reviewed patches have been landed. Closing bug.
Li Yin
Comment 5
2012-11-19 18:34:42 PST
The test "webaudio/biquad-getFrequencyResponse.html" should be removed from LayoutTests/platform/chromium/TestExpectations, since this bug is fixed.
Yury Semikhatsky
Comment 6
2012-11-19 21:25:26 PST
Re-enabled the test as suggested
http://trac.webkit.org/changeset/135245
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug