[REGRESSION] Layout Test webaudio/biquad-getFrequencyResponse.html is failing https://bugs.webkit.org/show_bug.cgi?id=97439

Reviewed by Kenneth Russell.

Fixes uninitialized member variable.

This should fix flaky failing test: webaudio/biquad-getFrequencyResponse.html

* Modules/webaudio/BiquadProcessor.cpp:
(WebCore::BiquadProcessor::BiquadProcessor):


Canonical link: https://commits.webkit.org/115442@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129418 268f45cc-cd09-0410-ab3c-d52691b4dbfc